--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
             <div class="divfonts2">
                 <div class="div_menu1">
                     <button class="btnmenu" id="btnmenu"><i class="i fa-solid fa-bars fa-fade"></i></button>
-                    <button class="btnmenu1" id="btnmenu1"><i class="i fa-solid fa-bars fa-fade"></i></button>
+                    <button class="btnmenu1" id="btnmenu1" style="font-size: xx-large;">X</button>
+                    <!-- <button class="btnmenu1" id="btnmenu1"><i class="i fa-solid fa-bars fa-fade"></i></button> -->
                 </div>
             </div>
         </nav>
@@ -105,54 +106,50 @@
                         <!-- <option disabled selected>Select font</option> -->
                         <option>Time New Romen</option>
                         <option>Calibri</option>
+                        <option>Algerian</option>
                         <option>Arial</option>
                         <option>MV Boli</option>
                     </select><br>
-                    <select title="Font size" class="aside_fontsize" name="" id="">
+                    <select title="Font size" class="aside_fontsize" name="" id="aside_fontSize">
                         <option disabled selected>Select font size</option>
-                        <option>8</option>
-                        <option>10</option>
-                        <option>12</option>
-                        <option>14</option>
-                        <option>16</option>
-                        <option>18</option>
-                        <option>20</option>
-                        <option>22</option>
-                        <option>24</option>
-                        <option>26</option>
-                        <option>28</option>
-                        <option>36</option>
-                        <option>48</option>
-                        <option>72</option>
+                        <option>large</option>
+                        <option>larger</option>
+                        <option>medium</option>
+                        <option>small</option>
+                        <option>smaller</option>
+                        <option>x-large</option>
+                        <option>x-small</option>
+                        <option>xx-large</option>
+                        <option>xx-small</option>
+                      
                     </select>
-                    <select title="Font size" class="aside_fontsize" name="" id="">
+                    <select title="Font size" class="aside_fontsize" name="" id="aside_fontalign">
                         <option disabled selected>Select font align</option>
                         <option>left</option>
                         <option>center</option>
                         <option>right</option>
                     </select>
-                    <div class="aside_fontupdn">
-                        <button title="Font Increase" class="aside_btnupdn">A+</button>
-                        <button title="Font Decrease" class="aside_btnupdn">A-</button>
-                        <button title="Font formating" class="aside_btnupdn">A/a</button>
-                    </div>
-                </div>
-                <div class="aside_divfonts">
-                    <div class="aside_fontbtn">
-                        <button title="Font Increase" class="aside_btnB">B</button>
-                        <button title="Font Decrease" class="aside_btnI">I</button>
-                        <button title="Font formating" class="aside_btnU">U</button>
-                        <button title="Font formating" class="aside_btns">abc</button>
-                    </div>
                     <div class="aside_fonttypes">
-                        <select title="Font type" class="aside_fonttype" name="" id="">
+                        <select title="Font type" class="aside_fonttype" name="" id="aside_fontStyle">
                             <option disabled selected>Aa</option>
-                            <option>Sentensece case</option>
                             <option>UPPERCASE</option>
-                            <option>lower case</option>
-                            <option>Capitalization</option>
+                            <option>lowercase</option>
+                            <option>Capitalize</option>
                         </select>
                     </div>
+                    <div class="aside_divfonts">
+                        <div class="aside_fontbtn">
+                            <button title="Font Increase" class="aside_btnB">B</button>
+                            <button title="Font Decrease" class="aside_btnI">I</button>
+                            <button title="Font formating" class="aside_btnU">U</button>
+                            <button title="Font formating" class="aside_btns">abc</button>
+                        </div>
+                    <div class="aside_fontupdn">
+                        <button title="Font Increase" class="aside_btnupdn" id="fontUp">A+</button>
+                        <button title="Font Decrease" class="aside_btnupdn" id="fontDown">A-</button>
+                        <button title="Font formating" class="aside_btnupdn1">Clear formating</button>
+                    </div>
+                </div>
                     <div class="aside_fontcolor">
                         <fieldset class="aside_fieldset">
                             <legend>Font Color</legend>
@@ -168,7 +165,7 @@
         </aside>
 
         <main class="main">
-            <textarea class="text_area" name="" id="textArea" cols="" rows="20"></textarea>
+            <textarea class="text_area" name="" id="textArea" cols="" rows="23"></textarea>
         </main>
     </section>
     <script src="app.js"></script>
