--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header">
         <nav class="nav">
             <div class="head">
-                <h1 class="heading"><a href="index.html">Text.Editor</a></h1>
+                <h1 class="heading"><a href="index.html">Text.<span class="editeading">Editor</span> </a></h1>
             </div>
             <div class="divfonts2">
                 <div class="div_menu1">
