--- a/index.html
+++ b/index.html
@@ -31,67 +31,55 @@
     <section class="footer">
         <div class="aside_textedit">
             <div class="aside_divfonts">
-                <select title="Font face" class="aside_fonts" name="" id="">
-                    <option disabled selected>Select font</option>
-                    <option>Time New Romen</option>
-                    <option>Calibri</option>
-                    <option>Algerian</option>
-                    <option>MV Boli</option>
+                <select title="Font face" class="aside_fonts" id="aside_fonts1">
+                    <!-- <option disabled selected>Select font</option> -->
+                        <option>Time New Romen</option>
+                        <option>Calibri</option>
+                        <option>Algerian</option>
+                        <option>Arial</option>
+                        <option>MV Boli</option>
                 </select><br>
-                <select title="Font size" class="aside_fontsize" name="" id="">
+                <select title="Font size" class="aside_fontsize" id="aside_fontSize1">
                     <option disabled selected>Select font size</option>
-                    <option>8</option>
-                    <option>10</option>
-                    <option>12</option>
-                    <option>14</option>
-                    <option>16</option>
-                    <option>18</option>
-                    <option>20</option>
-                    <option>22</option>
-                    <option>24</option>
-                    <option>26</option>
-                    <option>28</option>
-                    <option>36</option>
-                    <option>48</option>
-                    <option>72</option>
+                    <option>small</option>
+                    <option>medium</option>
+                    <option>large</option> 
                 </select>
-                <select title="Font size" class="aside_fontsize" name="" id="">
+                <select title="Font align" class="aside_fontsize" id="aside_fontalign1">
                     <option disabled selected>Select font align</option>
                     <option>left</option>
                     <option>center</option>
                     <option>right</option>
                 </select>
                 <div class="aside_fonttypes">
-                    <select title="Font type" class="aside_fonttype" name="" id="">
-                        <option disabled selected>Aa</option>
-                        <option>Sentensece case</option>
+                    <select title="Font type" class="aside_fonttype" id="aside_fontStyle1">
+                        <option disabled selected>Select font type</option>
                         <option>UPPERCASE</option>
-                        <option>lower case</option>
-                        <option>Capitalization</option>
+                        <option>lowercase</option>
+                        <option>Capitalize</option>
                     </select>
                 </div>
                 <div class="aside_fontupdn">
-                    <button title="Font Increase" class="aside_btnupdn">A+</button>
-                    <button title="Font Decrease" class="aside_btnupdn">A-</button>
-                    <button title="Font formating" class="aside_btnupdn">A/a</button>
+                    <button title="Font Increase" class="aside_btnupdn" id="fontUp1">A+</button>
+                    <button title="Font Decrease" class="aside_btnupdn" id="fontDown1">A-</button>
+                    <button title="Font formating" class="aside_btnupdn" id="formatChange1">clear formating</button>
                 </div>
             </div>
             <div class="aside_divfonts">
                 <div class="aside_fontbtn">
-                    <button title="Font Increase" class="aside_btnB">B</button>
-                    <button title="Font Decrease" class="aside_btnI">I</button>
-                    <button title="Font formating" class="aside_btnU">U</button>
-                    <button title="Font formating" class="aside_btns">abc</button>
+                    <button title="Font Increase" class="aside_btnB" id="btnbold1">Bold</button>
+                    <button title="Font Decrease" class="aside_btnI" id="btnitalic1">Italic</button>
+                    <button title="Font formating" class="aside_btnU"id="btnunderline1">Underline</button>
                 </div>
 
                 <div class="aside_fontcolor">
                     <fieldset class="aside_fieldset">
                         <legend>Font Color</legend>
-                        <input title="Font color" class="aside_color" type="color">
+                        <input id="Fontcolor1" title="Font color" class="aside_color" type="color">
                     </fieldset>
                     <fieldset class="aside_fieldset">
                         <legend>Background Color</legend>
-                        <input title="Back color" class="aside_color" type="color">
+                        <input id="Backcolor1" title="Back color" class="aside_color" type="color">
                     </fieldset>
                 </div>
             </div>
@@ -112,16 +100,9 @@
                     </select><br>
                     <select title="Font size" class="aside_fontsize" name="" id="aside_fontSize">
                         <option disabled selected>Select font size</option>
-                        <option>large</option>
-                        <option>larger</option>
-                        <option>medium</option>
                         <option>small</option>
-                        <option>smaller</option>
-                        <option>x-large</option>
-                        <option>x-small</option>
-                        <option>xx-large</option>
-                        <option>xx-small</option>
-                      
+                        <option>medium</option>
+                        <option>large</option>    
                     </select>
                     <select title="Font size" class="aside_fontsize" name="" id="aside_fontalign">
                         <option disabled selected>Select font align</option>
@@ -131,7 +112,7 @@
                     </select>
                     <div class="aside_fonttypes">
                         <select title="Font type" class="aside_fonttype" name="" id="aside_fontStyle">
-                            <option disabled selected>Aa</option>
+                            <option disabled selected>Select font type</option>
                             <option>UPPERCASE</option>
                             <option>lowercase</option>
                             <option>Capitalize</option>
@@ -139,25 +120,25 @@
                     </div>
                     <div class="aside_divfonts">
                         <div class="aside_fontbtn">
-                            <button title="Font Increase" class="aside_btnB">B</button>
-                            <button title="Font Decrease" class="aside_btnI">I</button>
-                            <button title="Font formating" class="aside_btnU">U</button>
-                            <button title="Font formating" class="aside_btns">abc</button>
+                            <button title="Font Increase" class="aside_btnB" id="btnbold">Bold</button>
+                            <button title="Font Decrease" class="aside_btnI" id="btnitalic">Italic</button>
+                            <button title="Font formating" class="aside_btnU"id="btnunderline">Underline</button>
+                            <!-- <button title="Font formating" class="aside_btns">abc</button> -->
                         </div>
                     <div class="aside_fontupdn">
                         <button title="Font Increase" class="aside_btnupdn" id="fontUp">A+</button>
                         <button title="Font Decrease" class="aside_btnupdn" id="fontDown">A-</button>
-                        <button title="Font formating" class="aside_btnupdn1">Clear formating</button>
+                        <button title="Font formating" class="aside_btnupdn1" id="formatChange">Clear formating</button>
                     </div>
                 </div>
                     <div class="aside_fontcolor">
                         <fieldset class="aside_fieldset">
                             <legend>Font Color</legend>
-                            <input title="Font color" class="aside_color" type="color">
+                            <input id="Fontcolor" title="Font color" class="aside_color" type="color">
                         </fieldset>
                         <fieldset class="aside_fieldset">
                             <legend>Background Color</legend>
-                            <input title="Back color" class="aside_color" type="color">
+                            <input id="Backcolor" title="Back color" class="aside_color" type="color">
                         </fieldset>
                     </div>
                 </div>
@@ -165,7 +146,7 @@
         </aside>
 
         <main class="main">
-            <textarea class="text_area" name="" id="textArea" cols="" rows="23"></textarea>
+            <textarea class="text_area" name="" id="textArea" cols="" rows="20"></textarea>
         </main>
     </section>
     <script src="app.js"></script>
