--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     </fieldset>
                 </div>
             </div>
-            <button class="btndownload" id="btndownload">Download</button>
+            <button class="btndownload" id="btndownload1">Download</button>
 
         </div>
     </section>
