--- a/index.html
+++ b/index.html
@@ -4,7 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Text-Editor </title>
+    <!-- // -->
+    <title>Text Editor - Powerful Online Writing Tool</title>
+    <meta name="description" content="A simple and powerful online text editor with multiple styling options. Change font, color, alignment, and more.">
+    <meta name="keywords" content="text editor, online editor, font styling, rich text editor">
+    <meta name="author" content="Rizwan Ghouri">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Text Editor - Powerful Online Writing Tool">
+    <meta property="og:description" content="A feature-rich online text editor for writing and formatting text easily.">
+    <meta property="og:image" content="https://addons.mozilla.org/user-media/previews/full/228/228908.png?modified=1622134213">
+    <meta property="og:url" content="https://Rizwan-Ghouri.github.io/textEditor/">
+    <meta name="twitter:card" content="https://addons.mozilla.org/user-media/previews/full/228/228908.png?modified=1622134213">
+    <link rel="canonical" href="https://Rizwan-Ghouri.github.io/textEditor">
+
+    <!-- // -->
     <link rel="icon" type="image/svg+xml" href="https://addons.mozilla.org/user-media/previews/full/228/228908.png?modified=1622134213" />
     <link rel="stylesheet" href="style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -92,7 +105,7 @@
             <div class="aside_textedit">
                 <div class="aside_divfonts">
                     <select title="Font face" class="aside_fonts" name="" id="aside_fonts">
-                        <!-- <option disabled selected>Select font</option> -->
+                        <option disabled selected>Select font</option>
                         <option>Time New Romen</option>
                         <option>Calibri</option>
                         <option>Algerian</option>
