--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <meta property="og:title" content="Text Editor - Powerful Online Writing Tool">
     <meta property="og:description" content="A feature-rich online text editor for writing and formatting text easily.">
     <meta property="og:image" content="https://addons.mozilla.org/user-media/previews/full/228/228908.png?modified=1622134213">
-    <meta property="og:url" content="https://Rizwan-Ghouri.github.io/textEditor/">
+    <meta property="og:url" content="https://rizwan-ghouri.github.io/Text.Editor/">
     <meta name="twitter:card" content="https://addons.mozilla.org/user-media/previews/full/228/228908.png?modified=1622134213">
-    <link rel="canonical" href="https://Rizwan-Ghouri.github.io/textEditor">
+    <link rel="canonical" href="https://rizwan-ghouri.github.io/Text.Editor">
 
     <!-- // -->
     <link rel="icon" type="image/svg+xml" href="https://addons.mozilla.org/user-media/previews/full/228/228908.png?modified=1622134213" />
