--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:url" content="https://rizwan-ghouri.github.io/Text.Editor/">
     <meta name="twitter:card" content="https://addons.mozilla.org/user-media/previews/full/228/228908.png?modified=1622134213">
     <link rel="canonical" href="https://rizwan-ghouri.github.io/Text.Editor">
-    <meta name="google-site-verification" content="your-verification-code" />
+    <meta name="google-site-verification" content="google192a9404203b2dbb.html" />
 
 
     <!-- // -->
