--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <meta name="twitter:card" content="https://addons.mozilla.org/user-media/previews/full/228/228908.png?modified=1622134213">
     <link rel="canonical" href="https://rizwan-ghouri.github.io/Text.Editor">
     <meta name="google-site-verification" content="google192a9404203b2dbb.html" />
-
+    <meta name="google-site-verification" content="t7mFwIEuv2Qkr8oOACC7zLnz_I0TJQeGG5G8QCrgkpE" />
+    <meta name="google-site-verification" content="0yrcRwGcDIpWjY2P8cKIHXD0tz5fmuHqJ1K9_lGW8yU" />
 
     <!-- // -->
     <link rel="icon" type="image/svg+xml" href="https://addons.mozilla.org/user-media/previews/full/228/228908.png?modified=1622134213" />
